--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
-fbs
-matplotlib
-matplotlib-inline
-mpldatacursor
-numpy
-pandas
-PyInstaller
-pyinstaller-hooks-contrib
-PyQt5
-PyQt5-Qt5
-PyQt5-sip
-pyqt5-tools
-scipy
-SQLAlchemy
-xlrd
-XlsxWriter
+altgraph==0.17.2
+cycler==0.11.0
+et-xmlfile==1.1.0
+fbs==1.1.3
+fonttools==4.33.3
+future==0.18.2
+kiwisolver==1.4.3
+macholib==1.16
+matplotlib==3.5.2
+mpldatacursor==0.7.1
+numpy==1.22.4
+openpyxl==3.0.10
+packaging==21.3
+pandas==1.4.2
+pefile==2022.5.30
+Pillow==9.1.1
+PyInstaller==3.4
+pyparsing==3.0.9
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.10.1
+python-dateutil==2.8.2
+pytz==2022.1
+pywin32-ctypes==0.2.0
+six==1.16.0
