--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ packaging==21.3
 pandas==1.4.2
 pefile==2022.5.30
 Pillow==9.1.1
-PyInstaller==3.4
+pyinstaller==5.1
+pyinstaller-hooks-contrib==2022.7
 pyparsing==3.0.9
 PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
